--- a/_data/data.yml
+++ b/_data/data.yml
@@ -4,262 +4,207 @@
 
 sidebar:
     position: right # position of the sidebar : left or right
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Oscar Redondo
+    tagline: Python Django Developer, DevOps, SRE, & Automation Engineer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    timezone: America/Cancun Timezone
+    email: o.redondo91@gmail.com
+    phone: +34 667097141
+    timezone: Europa/Madrid Timezone
     citizenship:
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
-    github: sharu725
+    website: oredondo.github.io/online-cv/ #do not add http://
+    linkedin: oscarredondodevops
+    xing: 
+    github: oredondo
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
+    twitter: 
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
-    pdf: http://www.africau.edu/images/default/sample.pdf
+    pdf: 
 
     languages:
-      title: Languages
+      title: Idiomas
       info:
-        - idiom: English
-          level: Native
+        - idiom: Español
+          level: Nativo
 
-        - idiom: French
-          level: Professional
-
-        - idiom: Spanish
-          level: Professional
+        - idiom: Ingles
+          level: Avanzado
 
     interests:
-      title: Interests
+      title: Intereses
       info:
-        - item: Climbing
+        - item: Motociclismo
           link:
 
         - item: Snowboarding
           link:
 
-        - item: Cooking
+        - item: Senderismo
           link:
 
+        - item: Música
+          link: 
+
 career-profile:
-    title: Career Profile
+    title: Perfil de carrera
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Ingeniero de software con más de 9 años de experiencia en el desarrollo de aplicaciones web utilizando
+       Python y Django, así como en la implementación y gestión de prácticas DevOps y de confiabilidad del sitio (SRE). 
+      Apasionado por crear soluciones tecnológicas eficientes y escalables, mi objetivo es mejorar continuamente la calidad 
+      del software y la infraestructura, optimizando procesos y asegurando una operación continua y sin interrupciones.
+      Experto en generar una trazabilidad de la infrastructura y generar flujos de trabajos y las mejores practicas.
+
+
+
 education:
-    title: Education
+    title: Educación
     info:
-      - degree: MSc in Computer Science
-        university: University of London
-        time: 2011 - 2012
+      - degree: Grado en Ingeniería Electrónica de Comunicaciones
+        university: Universidad Politécnica de Madrid
+        time: 2009 - 2020
         details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - degree: BSc in Applied Mathematics
-        university: Bristol University
-        time: 2007 - 2011
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          Elaboración, desarrollo y gestión de proyectos para el diseño, la concepción, despliegue y explotación de redes, servicios y aplicaciones de Telecomunicación.
+          Adquirir la formación científica y tecnológica, sobre materiales y componentes electrónicos, necesaria para el ejercicio profesional en el diseño y desarrollo de sistemas electrónicos en el sector de las telecomunicaciones.
+          Realizar la especificación, simulación, diseño, desarrollo, diagnóstico, documentación y puesta a punto de circuitos, sistemas y productos con aplicación en el ámbito de la informática y de las telecomunicaciones.
+          Diseñar sistemas digitales apoyándose en las tecnologías basadas en la lógica programable, circuitos integrados de aplicación específica y microprocesadores.
+          Desarrollar el hardware analógico y digital necesario que permita captar, adaptar, generar, procesar o digitalizar señales de diferentes características.
+          Diseñar aplicaciones orientadas a sistemas de medida y control electrónico.
+          Definir especificaciones de seguridad, calidad y fiabilidad de los productos electrónicos. Describir las pruebas y ensayos de acuerdo a las normativas reguladoras.
+          Integrar adecuadamente soluciones de tipo hardware y de tipo software, para alcanzar la máxima eficacia en el desarrollo de los sistemas electrónicos.
 
 experiences:
-    title: Experiences
+    title: Experecias
     info:
-      - role: Lead Developer
-        time: 2015 - Present
-        company: Startup Hubs, San Francisco
+      - role: Python Django Developer, DevOps, SER and Automation Engineer
+        time: 2017 - Present
+        company: BBVA Technologies, Madrid
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
-      - role: Senior Software Engineer
-        time: 2014 - 2015
-        company: Google, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - role: UI Developer
-        time: 2012 - 2014
-        company: Amazon, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          Diseño y desarrollo de aplicaciones web robustas utilizando Python y el framework Django.
+          Implementación de APIs RESTful para facilitar la integración con otros sistemas.
+          Automatización de pipelines de CI/CD utilizando herramientas como Jenkins, GitLab CI/CD...
+          Configuración y administración de infraestructura en la nube (AWS, Rhv Manager, Openstack, physical).
+          Implementación de prácticas de Infraestructura como Código (IaC) utilizando Ansible.
+          Gestión de incidentes y resolución de problemas críticos en tiempo real, asegurando la alta disponibilidad y resiliencia del sistema.
+          Análisis y mejora continua del rendimiento y la seguridad de las aplicaciones y la infraestructura.
 
-certifications:
-      title: Certifications
-      list:
-        - name: CV Builder
-          start: 2020
-          end: 2021
-          organization: Microsoft
-          credentialid: 111-222
-          credentialurl: www.google.com
-          credentialname: Google
-          details: |
-            Details about cert. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
-            Nullam eget orci purus. Nullam ultrices neque nibh.
-            Aenean fermentum, felis vulputate suscipit accumsan,
-            sem enim bibendum augue, sed convallis arcu lacus at dui.
-            Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
-            Praesent felis nibh, eleifend id eleifend id, dictum id enim.
-            Praesent venenatis erat non augue suscipit consectetur.
 
-            Second paragraph. Sed eleifend enim ante, vitae efficitur purus
-            fringilla vel. Ut euismod, sem sed vulputate venenatis,
-            justo diam viverra velit, sed rhoncus leo leo eu justo.
-            Suspendisse placerat risus ante, sed porta nisi blandit at.
-        - name: Git learning
-          start: 2019
-          end:
-          organization: Microsoft
-          credentialid: 111-222
-          credentialurl: www.github.com
-          credentialname: Github
-          details: |
-            Older certification. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
-            Nullam eget orci purus. Nullam ultrices neque nibh.
-            Aenean fermentum, felis vulputate suscipit accumsan,
-            sem enim bibendum augue, sed convallis arcu lacus at dui.
-            Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
-            Praesent felis nibh, eleifend id eleifend id, dictum id enim.
-            Praesent venenatis erat non augue suscipit consectetur.
+      - role: OpenStack Administrator & Developer at Oesia
+        time: 2015 - 2017
+        company: Oesia, Madrid
+        details: |
+          Desarrollo de herramienta de CloudComputing.
+          Basado en Openstack y ceph.           
+
+# certifications:
+#       title: Certifications
+#       list:
+#         - name: CV Builder
+#           start: 2020
+#           end: 2021
+#           organization: Microsoft
+#           credentialid: 111-222
+#           credentialurl: www.google.com
+#           credentialname: Google
+#           details: |
+#             Details about cert. Lorem ipsum dolor sit amet, consectetur
+#             adipiscing elit.
+#             Nullam eget orci purus. Nullam ultrices neque nibh.
+#             Aenean fermentum, felis vulputate suscipit accumsan,
+#             sem enim bibendum augue, sed convallis arcu lacus at dui.
+#             Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
+#             Praesent felis nibh, eleifend id eleifend id, dictum id enim.
+#             Praesent venenatis erat non augue suscipit consectetur.
+
+#             Second paragraph. Sed eleifend enim ante, vitae efficitur purus
+#             fringilla vel. Ut euismod, sem sed vulputate venenatis,
+#             justo diam viverra velit, sed rhoncus leo leo eu justo.
+#             Suspendisse placerat risus ante, sed porta nisi blandit at.
 
 projects:
-    title: Projects
+    title: Logros Destacados
     intro: >
-      You can list your side projects in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+      Proyectos destacados que he liderado y llevado a cabo con éxito a lo largo de mi carrera.
+
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+      - title: Orion
+        tagline: "Creación de Orion, una aplicación para la gestión y auditoría de la infraestructura del banco, que administra más de 4000 máquinas en diversas plataformas como on-premise, AWS, hardware físico y OpenStack.
+                  Generando una api para interectuar con la informacion en tiempo real. Gesiona la operación de toda la infraestructura
+                  asi como la subida a producción de todo ASO y APX, con miles de operaciones diarias."
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
+      - title: Jenkins pipelines
+        tagline: "Generación de pipelines y librerias complejas que permiten la generación de infrastructura de forma ordenada y efectiva."
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-oss:
-    title: OSS Contributions
-    intro: >
-      You can list your open source software contributions in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    contributions:
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-
-publications:
-    title: Publications
-    intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
-    papers:
-      - title: The Art of Computer Programming
-        link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
-
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
-
-      - title: A syntax directed compiler for Algol 60
-        link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
+      - title: Integración F5 con Openstack
+        tagline: "Tras la deprecación de la integración de F5 con OpenStack, se generó una API RESTful que permitió la integración de ambos productos."
 
 skills:
     title: Skills &amp; Proficiency
 
     toolset:
-      - name: Python & Django
-        level: 98%
-
+      - name: Python
+        level: 85%
+      - name: Django
+        level: 90%
+      - name: Celery
+        level: 75%
+         
       - name: Javascript & jQuery
-        level: 98%
-
-      - name: Angular
-        level: 98%
+        level: 70%
 
       - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
+        level: 70%
+      
+      - name: Ansible
         level: 85%
+      - name: Openstak
+        level: 80%
+      - name: AWS
+        level: 65%
+      - name: Azure
+        level: 40%
+      - name: Kubernetes
+        level: 50%
+      - name: Docker
+        level: 80%
+      - name: Infoblox
+        level: 55%
+      - name: Django Rest Framework
+        level: 80%
+      - name: Postgres
+        level: 65%
+      - name: MongoDB
+        level: 80%
+      - name: Linux
+        level: 75%
+      - name:  Java
+        level: 45%
+      - name: Groovy
+        level: 75%
+      - name: Jenkins
+        level: 75%
+      - name: Git
+        level: 85%
+      - name: F5 Load Balancer
+        level: 30%
 
-      - name: Sketch & Photoshop
-        level: 60%
-
+      - name: Comunicación Efectiva
+        level: 75%  
+      - name: Trabajo en Equipo
+        level: 95%
+      - name: Adaptabilidad
+        level: 95%
+      - name: Capacidad de Aprendizaje
+        level: 95%
+      - name: Liderazgo
+        level: 70%
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
