--- a/_data/data.yml
+++ b/_data/data.yml
@@ -62,6 +62,7 @@ career-profile:
       Apasionado por crear soluciones tecnológicas eficientes y escalables, mi objetivo es mejorar continuamente la calidad 
       del software y la infraestructura, optimizando procesos y asegurando una operación continua y sin interrupciones.
       Experto en generar una trazabilidad de la infrastructura y generar flujos de trabajos y las mejores practicas.
+      Actualmente en residiendo en Madrid con perfil de prefetentemente de Teletrabajo.
 
 
 
